--- a/app/src/main/res/layout/fragment_scan_product.xml
+++ b/app/src/main/res/layout/fragment_scan_product.xml
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
-            android:text="@string/product_typ"
+            android:text="@string/product_type"
             android:textSize="@dimen/_20ssp"
             app:layout_constraintStart_toStartOf="@+id/product_name_il"
             app:layout_constraintTop_toBottomOf="@+id/product_name_il" />
