--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="colorPrimaryLight">#63ccff</color>
     <color name="colorAccent">#000000</color>
     <color name="gray">#F322272B</color>
-    <color name="white_gray">#E9BBBEC0</color>
+    <color name="white_dark">#E4E1E1</color>
+    <color name="white_gray">#E9D4DCE0</color>
+    <color name="yellow">#B17600</color>
 </resources>
