--- a/app/src/main/res/layout/fragment_scan_product.xml
+++ b/app/src/main/res/layout/fragment_scan_product.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:scrollbars="vertical"
     android:layout_height="match_parent"
     android:fillViewport="true">
 
@@ -122,7 +123,6 @@
             android:id="@+id/date_label_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
             android:text="@string/date"
             android:textColor="@color/black"
             android:textSize="@dimen/_15ssp"
@@ -130,18 +130,8 @@
             app:layout_constraintStart_toStartOf="@+id/product_name_il"
             app:layout_constraintTop_toTopOf="@+id/date_p" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/time_label_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:text="@string/time"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_15ssp"
-            app:layout_constraintBottom_toBottomOf="@+id/time_p"
-            app:layout_constraintStart_toStartOf="@+id/product_name_il"
-            app:layout_constraintTop_toTopOf="@+id/time_p" />
-        
+
+
         <DatePicker
             android:id="@+id/date_p"
             android:layout_width="wrap_content"
@@ -156,7 +146,16 @@
             tools:ignore="ContentDescription" />
 
 
-
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/time_label_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/time"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_15ssp"
+            app:layout_constraintBottom_toBottomOf="@+id/time_p"
+            app:layout_constraintStart_toStartOf="@+id/product_name_il"
+            app:layout_constraintTop_toTopOf="@+id/time_p" />
 
         <com.example.task.presentation.utils.TimePickerCustom
             android:id="@+id/time_p"
@@ -185,10 +184,8 @@
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/time_p"
-            app:layout_constraintVertical_bias="0.384" />
+            app:layout_constraintTop_toBottomOf="@+id/time_p" />
 
         <ProgressBar
             android:id="@+id/progress_circular"
