--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/productListFragment"
+        android:id="@+id/navigation_home"
         android:icon="@drawable/ic_baseline_home_24"
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/scanBarcodeFragment"
+        android:id="@+id/navigation_scan_barcode"
         android:icon="@drawable/ic_baseline_qr_code_scanner_24"
         android:title="@string/title_scan_product" />
 
     <item
-        android:id="@+id/expiredProductsFragment"
+        android:id="@+id/navigation_expired_products"
         android:icon="@drawable/ic_baseline_expired_24"
         android:title="@string/title_expired_product" />
 
