--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,29 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/productListFragment">
+    app:startDestination="@id/navigation_home">
 
     <fragment
-        android:id="@+id/productListFragment"
+        android:id="@+id/navigation_home"
         android:name="com.example.task.presentation.ui.productlist.fragments.ProductListFragment"
         android:label="Products List"
         tools:layout="@layout/fragment_product_list">
         <action
             android:id="@+id/action_productListFragment_to_scanBarcodeFragment"
-            app:destination="@id/scanBarcodeFragment" />
+            app:destination="@id/navigation_scan_barcode" />
     </fragment>
     <fragment
-        android:id="@+id/scanBarcodeFragment"
+        android:id="@+id/navigation_scan_barcode"
         android:name="com.example.task.presentation.ui.scanproduct.fragments.ScanProductFragment"
         android:label="Scan Product"
         tools:layout="@layout/fragment_scan_product">
 
         <action
             android:id="@+id/action_scanBarcodeFragment_to_expiredProductsFragment"
-            app:destination="@id/expiredProductsFragment" />
+            app:destination="@id/navigation_expired_products" />
     </fragment>
     <fragment
-        android:id="@+id/expiredProductsFragment"
+        android:id="@+id/navigation_expired_products"
         android:name="com.example.task.presentation.ui.expiredprducts.fragments.ExpiredProductsFragment"
         android:label="Expired Products"
         tools:layout="@layout/fragment_expired_products"/>
