--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.task.presentation.ui.productlist.fragments.ProductListFragment"
+        android:name="com.example.task.presentation.ui.productlist.ProductListFragment"
         android:label="Fresh Products"
         tools:layout="@layout/fragment_product_list">
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_scan_barcode"
-        android:name="com.example.task.presentation.ui.scanproduct.fragments.ScanProductFragment"
+        android:name="com.example.task.presentation.ui.scanproduct.ScanProductFragment"
         android:label="Scan Product"
         tools:layout="@layout/fragment_scan_product">
 
@@ -26,7 +26,7 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_expired_products"
-        android:name="com.example.task.presentation.ui.expiredprducts.fragments.ExpiredProductsFragment"
+        android:name="com.example.task.presentation.ui.expiredprducts.ExpiredProductsFragment"
         android:label="Expired Products"
         tools:layout="@layout/fragment_expired_products"/>
 
